force-app/main/default/objects/OpportunityLineItem/fields/Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price__c</fullName>
    <formula>PricebookEntry.Cost_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Delete] Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>