force-app/main/default/objects/OpportunityLineItem/fields/Cost_Price_Rental__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_Rental__c</fullName>
    <label>[Delete] Cost Price Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>