force-app/main/default/objects/OpportunityLineItem/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <label>[Delete] Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Splicecom-Gold</fullName>
            </value>
            <value>
                <fullName>Splicecom-Silver</fullName>
            </value>
            <value>
                <fullName>Splicecom-Phones</fullName>
            </value>
            <value>
                <fullName>ShoreTel-Gold</fullName>
            </value>
            <value>
                <fullName>ShoreTel-Silver</fullName>
            </value>
            <value>
                <fullName>ShoreTel-Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>