force-app/main/default/objects/OpportunityLineItem/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <formula>UnitPrice -  Cost_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Delete] Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>