force-app/main/default/objects/OpportunityLineItem/fields/Rental_RSP__c.field-meta.xml
<CustomField>
    <fullName>Rental_RSP__c</fullName>
    <label>[Delete] Rental RSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>