force-app/main/default/objects/OpportunityLineItem/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BT Wholesale</fullName>
            </value>
            <value>
                <fullName>CityFibre</fullName>
            </value>
            <value>
                <fullName>Colt</fullName>
            </value>
            <value>
                <fullName>Giganet Local</fullName>
            </value>
            <value>
                <fullName>Glide</fullName>
            </value>
            <value>
                <fullName>Openreach</fullName>
            </value>
            <value>
                <fullName>Neos</fullName>
            </value>
            <value>
                <fullName>TTB</fullName>
            </value>
            <value>
                <fullName>Virgin Media</fullName>
            </value>
            <value>
                <fullName>Virtual 1</fullName>
            </value>
            <value>
                <fullName>Zen</fullName>
            </value>
            <value>
                <fullName>Telcoswitch</fullName>
            </value>
            <value>
                <fullName>Ubiquiti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>