force-app/main/default/objects/OpportunityLineItem/fields/Total_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Price__c</fullName>
    <formula>Quantity *  Cost_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Delete] Total Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>