force-app/main/default/objects/OpportunityLineItem/fields/Total_Cost_Price_old__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Price_old__c</fullName>
    <description>Total Cost/Buy Price</description>
    <formula>Quantity *  zzCost_Price_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Delete] Total Cost Price Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>