force-app/main/default/objects/OpportunityLineItem/fields/Total_list_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_list_Price__c</fullName>
    <description>Used to calculate maintenance/support prices where applicable</description>
    <formula>ListPrice * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Delete] Total List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>