force-app/main/default/objects/OpportunityLineItem/fields/Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit__c</fullName>
    <formula>If( ISBLANK(UnitPrice),  Total_list_Price__c  -  Total_Cost_Price__c,TotalPrice -  Total_Cost_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Delete] Total Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>