force-app/main/default/objects/OpportunityLineItem/fields/zzCost_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>zzCost_Price_Formula__c</fullName>
    <label>[Delete] Cost Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>