force-app/main/default/objects/OpportunityLineItem/validationRules/Sale_price_less_than_cost_price.validationRule-meta.xml
<ValidationRule>
    <fullName>Sale_price_less_than_cost_price</fullName>
    <active>true</active>
    <errorConditionFormula>UnitPrice &lt;    Cost_Price_Purchase__c</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>You cannot sell a product for less than cost price</errorMessage>
</ValidationRule>